update db relationship key
